=================
Changes for Crate
=================

Unreleased
==========

 - Remove limitation that prevented usage of columns from multiple tables
   in the same order by expression.
   eg: FROM t1, t2, t3 ORDER BY t1.x - t2.y + t3.z

 - Fix: Setting of a default schema was not possible by using the HTTP REST
   endpoint.

 - Fix: Error was thrown in case of primary key bulk delete statement
   with null bulk arguments.

 - Fix: Return 0 rows instead of an error when executing select queries
   that try to match null for primary key columns.
   eg: select * from t where pk in (null);

 - Fix: Allow select statements on columns of multiple nested object array.

 - F501: Added SQL conformance info to ``information_schema.sql_features``

 - Updated crate-admin to ``0.19.0`` which contains following changes:

   - Display failing node checks on overview page and allow to dismiss them.

   - Added German translation.
     This change also enables the possibility for further i18n.

 - Added plugin for unicast host discovery on Azure (ARM mode)

 - Fix: do not allow to create tables in read-only system schemas

 - Fix: type was not set correctly when creating a token filter
   with default name and no type

 - Fix: `COPY FROM` statements fail if null values are inserted into partitioned
   tables.

 - Fix: prevent creating `char filters` with missing properties

 - Optimized sys.nodes queries

 - Queries on the `sys.nodes` table will now short circuit in case some nodes
   in the cluster are unresponsive. All columns of the unresponsive nodes will
   contain null values except `id` and `name`.

 - Fixed a race condition which could cause select statements to get stuck

 - Added support for subselect statements that can be rewritten as a single query.

 - BREAKING: Column names returned on queries does not include the table and schema
   names anymore, i.e., ``select doc.t1.a from t1`` will return column name ``a`` instead of
   ``doc.t1.a``.
