@@ -36,6 +36,8 @@ import io.crate.analyze.validator.GroupBySymbolValidator;
 import io.crate.analyze.validator.HavingSymbolValidator;
 import io.crate.analyze.validator.SemanticSortValidator;
 import io.crate.exceptions.AmbiguousColumnAliasException;
+import io.crate.exceptions.RelationUnknownException;
+import io.crate.exceptions.ValidationException;
 import io.crate.metadata.FunctionInfo;
 import io.crate.metadata.TableIdent;
 import io.crate.metadata.doc.DocTableInfo;
@@ -90,18 +92,28 @@ public class RelationAnalyzer extends DefaultTraversalVisitor<AnalyzedRelation, 
     }
 
     @Override
-    protected AnalyzedRelation visitJoin(Join node, StatementAnalysisContext context) {
+    protected AnalyzedRelation visitJoin(Join node, StatementAnalysisContext statementContext) {
         if (!ALLOWED_JOIN_TYPES.contains(node.getType())) {
             throw new UnsupportedOperationException("Explicit " + node.getType().name() + " join syntax is not supported");
         }
-        process(node.getLeft(), context);
-        process(node.getRight(), context);
+        process(node.getLeft(), statementContext);
+        process(node.getRight(), statementContext);
+
+        RelationAnalysisContext context = statementContext.currentRelationContext();
 
         Optional<JoinCriteria> optCriteria = node.getCriteria();
         if (optCriteria.isPresent()) {
             JoinCriteria joinCriteria = optCriteria.get();
             if (joinCriteria instanceof JoinOn) {
-                context.currentRelationContext().addJoinExpression(((JoinOn) joinCriteria).getExpression());
+                Symbol joinCondition;
+                try {
+                    joinCondition = context.expressionAnalyzer().convert(
+                        ((JoinOn) joinCriteria).getExpression(), context.expressionAnalysisContext());
+                } catch (RelationUnknownException e) {
+                    throw new ValidationException(String.format(Locale.ENGLISH,
+                        "missing FROM-clause entry for table '%s'", e.fqn()));
+                }
+                statementContext.currentRelationContext().addJoinCondition(joinCondition);
             } else {
                 throw new UnsupportedOperationException(String.format(Locale.ENGLISH, "join criteria %s not supported",
                         joinCriteria.getClass().getSimpleName()));
@@ -303,8 +315,8 @@ public class RelationAnalyzer extends DefaultTraversalVisitor<AnalyzedRelation, 
     }
 
     private WhereClause analyzeWhere(Optional<Expression> where, RelationAnalysisContext context) {
-        List<Expression> joinExpressions = context.joinExpressions();
-        if (!where.isPresent() && joinExpressions.isEmpty()) {
+        List<Symbol> joinConditions = context.joinConditions();
+        if (!where.isPresent() && joinConditions.isEmpty()) {
             return WhereClause.MATCH_ALL;
         }
         Symbol query;
@@ -313,9 +325,8 @@ public class RelationAnalyzer extends DefaultTraversalVisitor<AnalyzedRelation, 
         } else {
             query = Literal.BOOLEAN_TRUE;
         }
-        if (!joinExpressions.isEmpty()) {
-            for (Expression joinExpression : joinExpressions) {
-                Symbol joinCondition = context.expressionAnalyzer().convert(joinExpression, context.expressionAnalysisContext());
+        if (!joinConditions.isEmpty()) {
+            for (Symbol joinCondition : joinConditions) {
                 query = new Function(AndOperator.INFO, Arrays.asList(query, joinCondition));
             }
         }
